language/move-lang/tests/move_check/parser/use_with_address.exp
error: 

   ┌── tests/move_check/parser/use_with_address.move:3:1 ───
   │
 3 │ address 0x1:
   │ ^^^^^^^ Unexpected 'address'
   ·
 3 │ address 0x1:
   │ ------- Expected 'fun'
   │

